# CryptoScan

./: .env.example  .gitignore  README.md  pyproject.toml
cryptoscan/: cli.py  config.py  db.py  llm_clients.py  mcp_bridge.py  models.py  runtime_state.py  scheduler.py  web.py
cryptoscan/exchange/: __init__.py  binance_testnet.py
cryptoscan/harness/: __init__.py  agent.py  context.py  dual_policy.py  llm_policy.py  memory.py
cryptoscan/notify/: __init__.py  telegram.py
cryptoscan/strategies/: __init__.py  base.py  oi_funding_flip.py  registry.py
cryptoscan/templates/: contracts.html  dashboard.html
cryptoscan/tools/: __init__.py  binance_market.py  contract_rankings.py  derivs_scanner.py  registry.py
scripts/: diag_decisions.py  diag_dual_replay.py  diag_memory_inject.py  diag_reflect_one.py  force_auto_demo.py  run_to.py  show_episode.py  status.py  test_full_trade.py
