[project]
name = "cryptoscan"
version = "0.1.0"
description = "Harness-agent powered crypto signal & trade journal"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "requests>=2.32",
    "sqlmodel>=0.0.22",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "apscheduler>=3.10",
    "openai>=1.50",
    "mcp>=1.2",
    "ccxt>=4.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
]

[project.scripts]
cryptoscan = "cryptoscan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cryptoscan"]
